--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer dark" id="footer">
+<footer class="footer" id="footer">
     <div class="container footer-container">
         <a class="footer_logo">
             LLOYD<span class="footer_logo_span">JEFFERSON.</span>
