--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,6 +1,6 @@
 <header class="header" id="header">
   <div class="header_container container">
-    <a class="header_logo"
+    <a href="./index.html" class="header_logo"
         >lloyd<span class="header_logo-span">jefferson.</span></a
       >
     <nav class="header_nav">
