--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -44,6 +44,7 @@ body {
 }
 
 .container {
+  width: 360px;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
@@ -51,6 +52,7 @@ body {
 
 @media screen and (min-width: 768px) {
   .container {
+    width: 768px;
     padding-left: 32px;
     padding-right: 32px;
   }
@@ -58,6 +60,7 @@ body {
 
 @media screen and (min-width: 1280px) {
   .container {
+    width: 1280px;
     padding-left: 32px;
     padding-right: 32px;
   }
