--- a/src/css/workTogether.css
+++ b/src/css/workTogether.css
@@ -1,6 +1,7 @@
 
 .workTogether {
-    padding: 80px 0;
+    padding-top: 80px ;
+    padding-bottom: 80px;
     display: flex;
     flex-direction: column;
 
@@ -206,6 +207,7 @@ background: #009156;
 @media screen and (min-width: 768px) {
     .workTogether {
         padding-top: 124px;
+        padding-top: 124px;
         background-image: url('../img/work-together/decor-bg.png');
         background-position: 98% 7%;
         background-repeat: no-repeat;
@@ -261,7 +263,8 @@ color: #292929;
 
 @media screen and (min-width: 1280px) {
     .workTogether {
-        padding: 164px 0;
+        padding-top: 164px;
+        padding-bottom: 164px;
         background-image: url('../img/work-together/decor-bg-4.png');
         background-position: 88% 9%;
         background-repeat: no-repeat;
@@ -269,7 +272,6 @@ color: #292929;
       
     } 
     .workTogether .container {
-       margin: 0;
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
