faq section final, i think

--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -6,7 +6,7 @@
     <ul class="faq-list">
       <li class="faq-item">
         <h4 class="faq-item-title">
-          What programming languages ​​are most often used in your project?
+          What programming languages ​are most often used in your project?
         </h4>
         <button type="button" class="faq-btn">
           <svg class="faq-btn-open" width="24" height="24">
