--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,4 +1,25 @@
-<section class="reviews" id="reviews"></section>
+<section class="reviews" id="reviews">
+  <div class="container reviews_container">
+    <h2 class="reviews_title">Reviews</h2>
+
+    <!-- Swiper -->
+    <div class="reviews_swiper">
+      <ul class="swiper-wrapper reviews_list" id="reviews_list"></ul>
+      <div class="review_arrows">
+        <div class="button_prev">
+          <svg class="review_icon_prev" width="24" height="24">
+            <use href="../img/symbol-defs-2.svg#icon-arrow-narrow-left"></use>
+          </svg>
+        </div>
+        <div class="button_next">
+          <svg class="review_icon_next" width="24" height="24">
+            <use href="../img/symbol-defs-2.svg#icon-arrow-narrow-right"></use>
+          </svg>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!--
     Внимательно проверяем файл styles.css и смотрим, что там прописано, чтобы не придумывать заново велосипед, а использовать руты и стандартный контейнер. 
