workTogether.update.css.js

--- a/src/partials/workTogether.html
+++ b/src/partials/workTogether.html
@@ -34,10 +34,23 @@
   
 </form>
         </div>
-        
-    
-    
+
 </section>
+<!-- modal -->
+<div class="modal-overlay" >
+  <div class="modal-content">
+    
+      <svg class="close-btn" width="24" height="24">
+        <use href="./public/symbol-defs.svg#icon-x"></use>
+      </svg>
+    
+    <div class="modal-message">
+      <h2 class="modal-title">Thank you for your interest in cooperation!</h2>
+      <p class="modal-text">The manager will contact you shortly to discuss further details and opportunities for cooperation. Please stay in
+        touch.</p>
+    </div>
+  </div>
+</div>
 
 
 
