--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -6,7 +6,7 @@
     <div class="reviews_swiper">
       <ul class="swiper-wrapper reviews_list" id="reviews_list"></ul>
       <div class="review_arrows">
-        <div class="button_prev">
+        <div class="button_prev disabled">
           <svg class="review_icon_prev" width="24" height="24">
             <use href="../img/symbol-defs-2.svg#icon-arrow-narrow-left"></use>
           </svg>
