--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -8,12 +8,12 @@
       <div class="review_arrows">
         <div class="button_prev disabled">
           <svg class="review_icon_prev" width="24" height="24">
-            <use href="../img/symbol-defs-2.svg#icon-arrow-narrow-left"></use>
+            <use href="./img/symbol-defs-2.svg#icon-arrow-narrow-left"></use>
           </svg>
         </div>
         <div class="button_next">
           <svg class="review_icon_next" width="24" height="24">
-            <use href="../img/symbol-defs-2.svg#icon-arrow-narrow-right"></use>
+            <use href="./img/symbol-defs-2.svg#icon-arrow-narrow-right"></use>
           </svg>
         </div>
       </div>
