--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -1,6 +1,6 @@
 <section class="reviews" id="reviews">
   <div class="container reviews_container">
-    <h2 class="reviews_title">Reviews</h2>
+    <h2 class="reviews_title" data-aos="fade-down">Reviews</h2>
 
     <!-- Swiper -->
     <div class="reviews_swiper">
