--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,10 +1,10 @@
 <section class="benefits" id="benefits">
   <div class="container benefits_container">
-    <h2 class="benefits_title">
+    <h2 class="benefits_title" data-aos="fade-right">
       <span class="benefits_title_span">Benefits</span> of working with me
     </h2>
 
-    <ul class="benefits_list">
+    <ul class="benefits_list" data-aos="fade-left">
       <li class="benefits_item">
         <div class="benefits_icon_background">
           <svg class="benefits_icon" width="24" height="24">
