--- a/src/partials/faq.html
+++ b/src/partials/faq.html
@@ -1,9 +1,9 @@
 <section class="faq">
   <div class="container faq-container">
-    <h2 class="faq-title">
+    <h2 class="faq-title" data-aos="fade-right">
       Frequently Asked <span class="faq-span">Question</span>
     </h2>
-    <ul class="faq-list">
+    <ul class="faq-list" data-aos="fade-down">
       <li class="faq-item">
         <h4 class="faq-item-title">
           What programming languages ​are most often used in your project?
