--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,14 +1,6 @@
-<!--
-    Внимательно проверяем файл styles.css и смотрим, что там прописано, чтобы не придумывать заново велосипед, а использовать руты и стандартный контейнер. 
-    Название и id секции не меняем, работаем только со своим html и css партиалами. 
-    Название классов должны в начале включать названи секции, пример: "header_nav", "hero_mainHeading".
-    Работаем только в своей ветке, в ветку main ничего не пушим. 
-    Название пуша должна содержать название секции, название элемента над которым работаете и номер обновления.
-    Пример: header_html_nr3, hero_css_nr7, footere_adaptive_nr13
--->
 <section class="hero" id="hero">
   <div class="container hero_content">
-    <h1 class="hero_title">
+    <h1 class="hero_title" data-aos="fade-right">
       hello, i am<picture class="hero_image-container">
         <source srcset="./img/hero/img.jpg 1x, ./img/hero/img@2x.jpg" />
         <img
@@ -20,7 +12,7 @@
       ><span class="hero_title_span">FULLSTACK DEVELOPER</span>
     </h1>
     <!-- button -->
-    <div class="hero_button-and-text">
+    <div class="hero_button-and-text" data-aos="fade-left">
       <a href="#workTogether" class="hero_text btn_txt">
         <svg class="hero_icon">
           <use href="./public/symbol-defs.svg#icon-hero_arrow"></use>
