--- a/src/css/workTogether.css
+++ b/src/css/workTogether.css
@@ -399,7 +399,7 @@ transition: opacity 250ms ease, visibility 250ms ease;
     right: 16px;
     top: 16px;
     stroke: #2b2b2b;
-    /* fill: transparent; */
+    fill: transparent;
  }
 
  .modal-message {
