--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,7 @@
 */
 @import url('./reset.css');
 @import url('./header.css');
-@import url('./aboutMe.css');
+@import url('./About.css');
 @import url('./benefits.css');
 @import url('./faq.css');
 @import url('./footer.css');
@@ -66,7 +66,7 @@ body {
   }
 }
 
-.aboutMe,
+.About,
 .benefits,
 .faq,
 .footer,
