--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -8,7 +8,7 @@
       <li class="benefits_item">
         <div class="benefits_icon_background">
           <svg class="benefits_icon" width="24" height="24">
-            <use xlink:href="#icon_user"></use>
+            <use href="./public/symbol-defs.svg#icon-user"></use>
           </svg>
         </div>
         <h3 class="benefit_title">Expertise</h3>
@@ -21,7 +21,7 @@
       <li class="benefits_item">
         <div class="benefits_icon_background">
           <svg class="benefits_icon" width="24" height="24">
-            <use xlink:href="#icon_message"></use>
+            <use href="./public/symbol-defs.svg#icon-message"></use>
           </svg>
         </div>
         <h3 class="benefit_title">Communication</h3>
@@ -34,7 +34,7 @@
       <li class="benefits_item">
         <div class="benefits_icon_background">
           <svg class="benefits_icon" width="24" height="24">
-            <use xlink:href="#icon_brush"></use>
+            <use href="./public/symbol-defs.svg#icon-brush"></use>
           </svg>
         </div>
         <h3 class="benefit_title">Art</h3>
@@ -47,7 +47,7 @@
       <li class="benefits_item">
         <div class="benefits_icon_background">
           <svg class="benefits_icon" width="24" height="24">
-            <use xlink:href="#icon_hourglass"></use>
+            <use href="./public/symbol-defs.svg#icon-hourglass"></use>
           </svg>
         </div>
         <h3 class="benefit_title">Urgent execution</h3>
