--- a/src/partials/workTogether.html
+++ b/src/partials/workTogether.html
@@ -50,7 +50,7 @@
         touch.</p>
     </div>
   </div>
-</div
+</div>
 
       <button class="workTogether-button" type="submit">Send message</button>
     </form>
