--- a/src/css/myProjects.css
+++ b/src/css/myProjects.css
@@ -16,7 +16,7 @@
 }
 
 .my-projects-title-accent {
-  color: #00b068;
+  color: var(--accet-green);
 }
 
 .projects-list {
@@ -88,6 +88,7 @@
 }
 
 .icon-arrow {
+  stroke: var(--accet-green);
   margin-left: 12px;
 }
 
@@ -110,7 +111,7 @@
 }
 
 .load-more-btn:hover {
-  color: #00b068;
+  color: var(--accet-green);
 }
 
 .btn-loadmore::after {
@@ -118,7 +119,7 @@
   content: '';
   height: 2px;
   border-radius: 2px;
-  background: #00b068;
+  background: var(--accet-green);
   position: absolute;
   left: 24px;
   bottom: 12px;
@@ -204,7 +205,6 @@
 /* ==== DARK MODE ==== */
 
 .dark-mode-on {
-
   .my-projects-title {
     color: #f0f0f0;
   }
@@ -230,6 +230,6 @@
   }
 
   .load-more-btn:hover {
-    color: #14c57c;
+    color: rgba(120, 0, 176, 0.2);
   }
 }
