--- a/src/css/faq.css
+++ b/src/css/faq.css
@@ -162,7 +162,7 @@
     position: absolute;
     width: 526px;
     height: 408px;
-    background: url(../img/faq/decor-faq@1x.webp);
+    background: url('../img/faq/decor-faq@1x.png');
     background-size: cover;
     background-repeat: no-repeat;
     bottom: 164px;
