about me animation

--- a/src/partials/About.html
+++ b/src/partials/About.html
@@ -1,10 +1,10 @@
 <section class="about-me" id="aboutme">
   <div class="my-section container">
-    <h2 class="about-me-title">
+    <h2 class="about-me-title" >
       About
       <span class="me">me</span>
     </h2>
-    <div class="about-me-container">
+    <div class="about-me-container" data-aos="fade-up">
       <div class="picture-block">
         <img
           srcset="./img/about-me-img.jpg 1x, ./img/about-me-img-2x.jpg 2x"
@@ -15,7 +15,7 @@
         />
       </div>
 
-      <div class="bio-block">
+      <div class="bio-block"  data-aos="fade-down-left">
         <h3 class="bio-title">BIO</h3>
 
         <p class="bio-body">
@@ -36,7 +36,7 @@
       </div>
     </div>
 
-    <div class="education-block">
+    <div class="education-block" data-aos="fade-down-left">
       <div class="education">
         <h3 class="bio-title">EDUCATION</h3>
 
@@ -48,7 +48,7 @@
             </p>
           </li>
           <li class="about-me-item">
-            <p class="about-me-txt">
+            <p class="about-me-txt" v>
               2019 - 2020 / Advanced Web Development Certificate, GoIT IT
               School, New York
             </p>
@@ -61,11 +61,11 @@
         </ul>
       </div>
 
-      <div class="role-block">
+      <div class="role-block" data-aos="fade-down-left">
         <h3 class="bio-title">ROLE</h3>
         <ul class="about-me-list">
           <li class="about-me-item">
-            <p class="about-me-txt">Frontend development</p>
+            <p class="about-me-txt" >Frontend development</p>
           </li>
           <li class="about-me-item">
             <p class="about-me-txt">HeadlessCMS, Wordpress</p>
@@ -76,6 +76,6 @@
         </ul>
       </div>
     </div>
-
+    <script src="./js/about-me.js" type="module"></script>
   </div>
 </section>
