--- a/src/css/About.css
+++ b/src/css/About.css
@@ -78,6 +78,17 @@ transform: scale(1.05);}
   margin-top: 40px;
 }
 
+
+.animation {
+  opacity: 0;
+  transform: translateX(-50px);
+  transition: opacity 1s ease-out, transform 1s ease-out;
+}
+
+.animation.animate {
+  opacity: 1;
+  transform: translateX(0);
+}
 @media screen and (min-width: 768px) {
   .about-me {
     padding-top: 124px;
@@ -175,4 +186,3 @@ transform: scale(1.05);}
     background-position: right 4% bottom 25%;
   }
 }
-
