--- a/src/partials/About.html
+++ b/src/partials/About.html
@@ -1,4 +1,4 @@
-<section class="about-me" id="aboutme">
+<section class="about-me" id="aboutMe">
   <div class="my-section container">
     <h2 class="about-me-title">
       About
