--- a/src/css/benefits.css
+++ b/src/css/benefits.css
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   gap: 16px;
-  width: 320px;
+  width: calc(100% - 40px);
 }
 
 .benefits_icon_background {
