--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -35,7 +35,7 @@
   </div>
 </header>
 
-<div class="header_mobile-menu is-ope" id="mobile-menu">
+<div class="header_mobile-menu" id="mobile-menu">
   <div class="header_mobile-menu_cont">
     <ul class="header_mobile-menu_nav-list">
       <li class="header_mobile-menu_nav-item">
@@ -50,11 +50,3 @@
     </ul>
   </div>
 </div>
-<!--
-    Внимательно проверяем файл styles.css и смотрим, что там прописано, чтобы не придумывать заново велосипед, а использовать руты и стандартный контейнер. 
-    Название и id секции не меняем, работаем только со своим html и css партиалами. 
-    Название классов должны в начале включать названи секции, пример: "header_nav", "hero_mainHeading".
-    Работаем только в своей ветке, в ветку main ничего не пушим. 
-    Название пуша должна содержать название секции, название элемента над которым работаете и номер обновления.
-    Пример: header_html_nr3, hero_css_nr7, footere_adaptive_nr13
--->
