--- a/src/css/workTogether.css
+++ b/src/css/workTogether.css
@@ -167,6 +167,7 @@
   font-weight: 300;
   line-height: 1.5;
   letter-spacing: 0.03em;
+  resize: none;
 }
 .workTogether-textarea::placeholder {
   color: rgba(41, 41, 41, 0.4);
