hero html about-me css

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -33,28 +33,24 @@
   <div class="social_media">
     <ul class="social_list">
       <li class="social_list_item">
-        <a href="https://www.instagram.com/goitclub/" class="social_list_link"
-          >Instagram</a
+        <a href="https://www.instagram.com/goitclub/" class="social_list_link" target="_blank">Instagram</a
         >
       </li>
       <li class="social_list_item">
-        <a href="https://www.facebook.com/goITclub/" class="social_list_link"
-          >Facebook</a
+        <a href="https://www.facebook.com/goITclub/" class="social_list_link" target="_blank">Facebook</a
         >
       </li>
       <li class="social_list_item">
         <a
           href="https://www.linkedin.com/school/goit-start-your-career-in-it"
-          class="social_list_link"
-          >LinkedIn</a
+          class="social_list_link" target="_blank">LinkedIn</a
         >
       </li>
       <li class="social_list_item">
         <a
           href="https://github.com/tsaigetsu/goit-js-project-05"
-          class="social_list_link"
-          >GitHub</a
-        >
+          class="social_list_link" target="_blank">GitHub</a
+          >
       </li>
     </ul>
   </div>
