--- a/src/css/About.css
+++ b/src/css/About.css
@@ -167,9 +167,9 @@ transform: scale(1.05);}
     margin-top: 312px;
     width: 384px;
     height: 448px;
-    border: 1px solid #000;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     border-radius: 20px;
+    transition: 400ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .bio-block {
