--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -58,6 +58,7 @@
   background-color: rgba(120, 0, 176, 0.2);
   border-radius: 16px;
   z-index: -1;
+  transition: 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .btn_txt:hover::before {
   background-color: rgba(96, 55, 153, 0.6);
