--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -13,6 +13,7 @@
 .footer {
     border-top: 1px solid var(--light-grey);
 }
+
 .footer-container {
     display: flex;
     flex-direction: column;
@@ -61,6 +62,12 @@
     text-align: center;
     width: 197px;
     box-sizing: content-box;
+    transition: 300ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer_list_link:hover,
+.footer_list_link:focus {
+    color: var(--accet-green);
 }
 
 @media screen and (min-width: 768px) {
