--- a/src/css/workTogether.css
+++ b/src/css/workTogether.css
@@ -53,10 +53,16 @@ font-family: Poppins;
     font-size: 16px;
     font-weight: 300;
     line-height: 1.5;
+    
 }
 .workTogether-list-item {
 display: flex;
 align-items: flex-start;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+.workTogether-list-item:hover {
+    color: var(--accet-green);
 }
 .workTogether-link {
     color:#292929;
@@ -67,8 +73,11 @@ align-items: flex-start;
     line-height: 1.5;
     letter-spacing: 0.03em;
     margin-left: 16px;
+    /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-
+.workTogether-link:hover {
+color: var(--accet-green);
+}
 /* form */
 
 .workTogether-form {
@@ -119,6 +128,7 @@ background-color: #E4E5E6;
     border-radius: 8px;
     border: none;
     outline: none;
+    color: var(--accet-green);
 }
 /* when enter incorrect value-text color */
 .workTogether-input:not(:placeholder-shown):invalid {
@@ -183,6 +193,7 @@ color: rgba(41, 41, 41, 0.40);
     border: none;
     background-color: #E4E5E6;
     outline: none;
+    color: var(--accet-green);
 }
 
 /* button */
@@ -197,10 +208,12 @@ color: rgba(41, 41, 41, 0.40);
     width: 100%;
     font-weight: 500;
     text-transform: uppercase;
+    transition: 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .workTogether-button:hover, :focus {
 background: #009156;
+color: var(--accet-green);
 }
 /* tablet */
 
@@ -255,6 +268,7 @@ color: #292929;
     align-items: flex-start;
     gap: 10px;
     width: 173px;
+
 }
 
 }
@@ -387,7 +401,7 @@ transition: opacity 250ms ease, visibility 250ms ease;
     border: 1px solid rgba(250, 250, 250, 0.10);
     background: #F0F0F0;
     opacity: 1;
-    transition: visibility 250ms ease, opacity 250ms ease
+    transition: visibility 250ms ease, opacity 250ms ease;
  }
 
  .close-btn {
@@ -405,6 +419,7 @@ transition: opacity 250ms ease, visibility 250ms ease;
     flex-direction: column;
     align-items: flex-start;
     gap: 16px;
+    background-color: #F0F0F0;
  }
 
  .modal-title {
