--- a/src/css/workTogether.css
+++ b/src/css/workTogether.css
@@ -69,7 +69,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .workTogether-link:hover {
 color: var(--accet-green);
-  
+} 
   .workTogether-icon {
   stroke: var(--accet-green);
   fill: none;
