--- a/src/css/header.css
+++ b/src/css/header.css
@@ -124,8 +124,9 @@
   position: fixed;
   top: 64px;
   left: 0;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+  transition: opacity 300ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 300ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -146,6 +147,9 @@
   overflow: auto;
   display: flex;
   justify-content: center;
+  background-image: url('../img/hero/decor-bg-mob.png');
+  background-repeat: no-repeat;
+  background-position: left 50% top 20px;
 }
 .header_mobile-menu_nav-list {
   margin: auto 0;
@@ -197,6 +201,10 @@
     font-weight: 300;
     line-height: 1.5;
     letter-spacing: 0.5px;
+    transition: 300ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+  .header_nav-link:hover {
+    color: var(--accet-green);
   }
   .header_darkmode-toggle_label {
     margin-right: 40px;
