--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -42,17 +42,21 @@ body {
   background-color: #1e2023;
   color: var(--white);
 }
-
 .container {
-  width: 360px;
+  max-width: 360px;
   margin: 0 auto;
   padding-left: 20px;
   padding-right: 20px;
 }
+@media screen and (min-width: 360px) {
+  .container {
+  max-width: 360px;
+}
+}
 
 @media screen and (min-width: 768px) {
   .container {
-    width: 768px;
+    max-width: 768px;
     padding-left: 32px;
     padding-right: 32px;
   }
@@ -60,7 +64,7 @@ body {
 
 @media screen and (min-width: 1280px) {
   .container {
-    width: 1280px;
+    max-width: 1280px;
     padding-left: 32px;
     padding-right: 32px;
   }
