hero_media_transition

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -15,8 +15,8 @@
     <div class="hero_button-and-text" data-aos="fade-left">
       <a href="#workTogether" class="hero_text btn_txt">
         <svg class="hero_icon">
-          <use href="./public/symbol-defs.svg#icon-hero_arrow"></use>
-        </svg>Order the project
+          <use href="./public/symbol-defs.svg#icon-hero_arrow"></use></svg
+        >Order the project
       </a>
 
       <!-- text -->
@@ -33,24 +33,36 @@
   <div class="social_media">
     <ul class="social_list">
       <li class="social_list_item">
-        <a href="https://www.instagram.com/goitclub/" class="social_list_link" target="_blank">Instagram</a
+        <a
+          href="https://www.instagram.com/goitclub/"
+          class="social_list_link"
+          target="_blank"
+          >Instagram</a
         >
       </li>
       <li class="social_list_item">
-        <a href="https://www.facebook.com/goITclub/" class="social_list_link" target="_blank">Facebook</a
+        <a
+          href="https://www.facebook.com/goITclub/"
+          class="social_list_link"
+          target="_blank"
+          >Facebook</a
         >
       </li>
       <li class="social_list_item">
         <a
           href="https://www.linkedin.com/school/goit-start-your-career-in-it"
-          class="social_list_link" target="_blank">LinkedIn</a
+          class="social_list_link"
+          target="_blank"
+          >LinkedIn</a
         >
       </li>
       <li class="social_list_item">
         <a
           href="https://github.com/tsaigetsu/goit-js-project-05"
-          class="social_list_link" target="_blank">GitHub</a
-          >
+          class="social_list_link"
+          target="_blank"
+          >GitHub</a
+        >
       </li>
     </ul>
   </div>
