--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -91,6 +91,7 @@
 }
 .social_list_item:hover, :focus {
   color: var(--accet-green);
+  transition: 300ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .dark-mode-on {
