--- a/src/css/About.css
+++ b/src/css/About.css
@@ -25,10 +25,16 @@
   gap: 40px;
 }
 
+.picture-block{
+  width: 100%;
+}
+
 .picture-aboutme {
   border-radius: 16px;
   width: 320px;
   height: 374px;
+  max-width: 100%;
+  max-height: 100%;
 }
 .picture-aboutme:hover{
 transform: scale(1.05);}
@@ -78,17 +84,6 @@ transform: scale(1.05);}
   margin-top: 40px;
 }
 
-
-.animation {
-  opacity: 0;
-  transform: translateX(-50px);
-  transition: opacity 1s ease-out, transform 1s ease-out;
-}
-
-.animation.animate {
-  opacity: 1;
-  transform: translateX(0);
-}
 @media screen and (min-width: 768px) {
   .about-me {
     padding-top: 124px;
