--- a/src/partials/workTogether.html
+++ b/src/partials/workTogether.html
@@ -1,9 +1,9 @@
 <section class="workTogether" id="workTogether">
   <div class="container workTogether-container">
-    <h2 class="workTogether-title">
+    <h2 class="workTogether-title" data-aos="fade-right">
       LET'S <span class="workTogether-span"> WORK TOGETHER </span>
     </h2>
-    <div class="workTogether-content">
+    <div class="workTogether-content" data-aos="fade-right">
       <p class="workTogether-text">
         Contact me to transform your ideas into exceptional solutions.
       </p>
@@ -48,7 +48,7 @@
         </ul>
       </address>
     </div>
-    <form class="workTogether-form" name="workTogether-form">
+    <form class="workTogether-form" data-aos="fade-right" name="workTogether-form">
       <div class="workTogether-form-input">
         <input
           class="workTogether-input"
@@ -78,9 +78,11 @@
 <!-- modal -->
 <div class="modal-overlay">
   <div class="modal-content">
-    <svg class="close-btn" width="24" height="24">
-      <use href="./public/symbol-defs.svg#icon-x"></use>
-    </svg>
+    <button class="close-btn">
+      <svg class="close-btn-svg" width="24" height="24">
+        <use href="./public/symbol-defs.svg#icon-x"></use>
+      </svg>
+    </button>
 
     <div class="modal-message">
       <h2 class="modal-title">Thank you for your interest in cooperation!</h2>
